[gd_scene load_steps=5 format=2]

[ext_resource path="res://Starter.gd" type="Script" id=1]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/big font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/TOYElec_Operation game 5 (ID 1686)_BSB.wav" type="AudioStream" id=4]

[node name="Starter" type="Node"]
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="Label" type="Label" parent="Node"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
light_mask = -2147483623
margin_right = 1920.0
margin_bottom = 1080.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over
"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Node"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
light_mask = 24
margin_right = 1920.0
margin_bottom = 1080.0
custom_fonts/font = ExtResource( 2 )
text = "press space to continue"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_start_delayed"]
